zishao-v410-admin-guide-part1-0522

--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -1,4 +1,11 @@
-# Deploy OceanBase Database in a production environment
+# Deploy OceanBase Database via CLI in a production environment
+
+This topic describes how to deploy OceanBase Database via OBD in a production environment.
+
+<!-- <main id="notice" type='explain'>
+  <h4>Note</h4>
+  <p>OBD 除了支持通过命令行方式部署 OceanBase 数据库生产环境外，也支持通过白屏部署 OceanBase 集群环境。推荐您通过 OBD 白屏方式进行部署，详细操作步骤请参考 <a href="4.deploy-by-ui/1.deploy-by-obd.md">通过 OBD 白屏部署 OceanBase 集群</a>。</p>
+</main> -->
 
 ## Terms
 
@@ -12,23 +19,26 @@
 
 * OBD
 
-   OceanBase Deployer (OBD) is a tool used to install and deploy open source software of OceanBase Database.
+   OceanBase Deployer (OBD) is a tool used to install and deploy OceanBase Database. For more information about OBD, see [OBD Documentation](https://en.oceanbase.com/docs/community-obd-en-10000000000860039).
 
 * ODP
 
-   OceanBase Database Proxy (ODP), also known as OBProxy, is a high-performance reverse proxy server designed for OceanBase Database.
+   OceanBase Database Proxy (ODP), also known as OBProxy, is a high-performance reverse proxy server designed for OceanBase Database. For more information about ODP, see [ODP Documentation](https://en.oceanbase.com/docs/community-odp-en-10000000000213151).
 
-* OCP
+* OCP Express
 
-   OceanBase Cloud Platform (OCP) is an operation and maintenance tool of OceanBase Database.
-
+   OCP Express is a web-based management tool for OceanBase Database 4.x. It offers support for both key performance and basic database management for the database cluster. For more information, see [OCP Express](../../../7.reference/6.oceanbase-tools/4.1.ocp-express.md).
 ## Prerequisites
 
 Before you connect to OceanBase Database, make sure that the following prerequisites are satisfied:
 
 * Your server meets the software and hardware requirements. For more information, see [Software and hardware requirements](../2.local-deployment/1.requirements-for-software-and-hardware.md).
 
-* In the production environment, you must check the environment and configurations. For more information, see [Configuration before deployment](2.environment-and-configuration-checks/2.environment-and-configuration-checks.md).
+* In the production environment, you must check the environment and configurations. For more information, see [Configuration before deployment](2.environment-and-configuration-checks/1.view-resources-optional.md).
+
+* You have installed OBD for your central control server. For more information, see [Install and configure OBD](https://en.oceanbase.com/docs/community-obd-en-10000000000862271).
+
+* You have installed OBClient for your servers. For more information, see [OBClient Documentation](https://github.com/oceanbase/obclient/blob/master/README.md).
 
 ## Deployment mode
 
@@ -51,7 +61,7 @@ This topic describes a three-replica deployment mode. You can choose an appropri
   </main>
 
 <main id="notice" type='notice'>
-  <h4>Notice</h4>
+  <h4>Note</h4>
   <p>The following describes the deployment of OceanBase Database on an x86-based CentOS Linux 7.9 system. The procedure may be different on other operating systems. </p>
 </main>
 
@@ -59,7 +69,7 @@ This topic describes a three-replica deployment mode. You can choose an appropri
 
 OceanBase Database is available in an all-in-one installation package since V4.0.0. You can use this installation package to install OBD, OceanBase Database, ODP, OBAgent, Grafana, and Prometheus at a time. You can specify the components to install and the versions of them.
 
-1. You can download the latest all-in-one package from the [Download Center](https://open.oceanbase.com/softwareCenter/community). The package is named in the `oceanbase-all-in-one-4.xx.xx-xxx.tar.gz` format.
+1. You can download the latest all-in-one package from [OceanBase Download Center](https://en.oceanbase.com/softwarecenter). The package is named in the `oceanbase-all-in-one-4.xx.xx-xxx.tar.gz` format.
 
 2. Run the following commands to decompress and install the package:
 
@@ -69,10 +79,10 @@ OceanBase Database is available in an all-in-one installation package since V4.0
    ./install.sh
    ```
 
-              <main id="notice" type='notice'>
-                <h4>Notice</h4>
-                <p>After installation, you must run the <code>source ~/.oceanbase-all-in-one/bin/env.sh</code> command. Directly running <code>which obd</code> will fail. </p>
-              </main>
+   <main id="notice" type='notice'>
+    <h4>Note</h4>
+    <p>After installation, you must run the <code>source ~/.oceanbase-all-in-one/bin/env.sh</code> command. Directly running <code>which obd</code> will fail. </p>
+   </main>
 
 3. Run the `which obd` and `which obclient` commands to check whether OBD and OBClient are installed. If you can find the `obd` and `obclient` folders under the `oceanbase-all-in-one` directory, OBD and OBClient are installed.
 
@@ -155,7 +165,7 @@ We recommend that you switch to a non-root user to ensure data security.
   <main id="notice" type='explain'>
     <h4>Note</h4>
     <ul>
-    <li>You can use the online YAML Checker to validate your configuration files. For more information, see <a href="https://www.bejson.com/validators/yaml_editor/">Online YAML Checker </a>. </li>
+    <li>You can use the online YAML Checker to validate your configuration files. </li>
     <li>In this example, the <code>autodeploy</code> option is used for installation and deployment. With the <code>autodeploy</code> option, hardware resources are automatically detected and the parameters are adjusted accordingly. This, however, may fail to maximize resource utilization. For example, if the hard disk space is insufficient, memory usage will be decreased. If you are familiar with the parameters of OceanBase Database, we recommend that you use the <code>deploy</code> option for installation and deployment. If you use the <code>deploy</code> option, the configuration files to be used are located in the <code>~/.oceanbase-all-in-one/conf</code> directory, rather than the <code>~/.oceanbase-all-in-one/conf/autodeploy</code> directory. </li>
     </ul>
   </main>
@@ -234,7 +244,7 @@ We recommend that you use the all-in-one package to install the components. Howe
 
 ### Install OBD offline
 
-Download the OBD installation package of the desired version from [OceanBase Download Center](https://open.oceanbase.com/softwareCenter/community). We recommend that you download the latest version.
+Download the OBD installation package of the desired version from [OceanBase Download Center](https://en.oceanbase.com/softwarecenter). We recommend that you download the latest version.
 
 After you have downloaded the OBD installation package, copy it to your central control server.
 
@@ -252,7 +262,7 @@ alien --scripts -i ob-deploy-x.x.x.el7.x86_64.rpm
 
 ### Install OBClient offline
 
-Download the OBClient installation package of the desired version from [OceanBase Download Center ](https://open.oceanbase.com/softwareCenter/community). We recommend that you download the latest version.
+Download the OBClient installation package of the desired version from [OceanBase Download Center ](https://en.oceanbase.com/softwarecenter). We recommend that you download the latest version.
 
 After you have downloaded the OBClient installation package, copy it to your central control server.
 
@@ -274,7 +284,7 @@ alien --scripts -i obclient-x.x.x.el7.x86_64.rpm
 
 To ensure data security, we recommend that you switch to a non-root user before you install OceanBase Database and ODP.
 
-To install OceanBase Database and ODP offline, download the installation packages of OceanBase Database, OBLibs, and ODP from [OceanBase Download Center](https://open.oceanbase.com/softwareCenter/community).
+To install OceanBase Database and ODP offline, download the installation packages of OceanBase Database, OBLibs, and ODP from [OceanBase Download Center](https://en.oceanbase.com/softwarecenter).
 
 * oceanbase-ce-x.x.x.x-xxxx.el7.x86_64
 
@@ -376,4 +386,4 @@ Go to the directory of the installation packages and install OceanBase Database 
        home_path: /home/admin/obproxy
    ```
 
-   You can use the online YAML Checker to validate your configuration files. For more information, see [Online YAML Checker ](https://www.bejson.com/validators/yaml_editor/).
+   You can use the online YAML Checker to validate your configuration files.
