--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/3.delete-obproxy-cluster.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/3.delete-obproxy-cluster.md
@@ -1,6 +1,6 @@
 # Delete an ODP cluster
 
-You can delete an ODP cluster that is no longer required. After an ODP cluster is deleted, the OBProxies in the cluster are uninstalled from all hosts, and the resources occupied by ODP services on the hosts are released.
+You can delete an ODP cluster that is no longer required. After an ODP cluster is deleted, the ODPs in the cluster are uninstalled from all hosts, and the resources occupied by ODP services on the hosts are released.
 
 ## Prerequisites
 
@@ -14,10 +14,6 @@ You can delete an ODP cluster that is no longer required. After an ODP cluster i
 
 2. In the left-side navigation pane, click **OBProxy**.
 
-3. In the ODP cluster list, click the ODP cluster that you want to refresh to go to the **Overview** page of the ODP cluster.
+3. In the ODP cluster list, locate the ODP cluster that you want to delete and click **Delete** from the **Actions** column..
 
-4. Click **Delete Cluster**.
-
-   ![09162145](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0863922361/p327470.png)
-
-5. In the dialog box that appears, click **Delete**.
+4. In the dialog box that appears, click **Delete**.
