--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md
@@ -1,6 +1,6 @@
 # Upgrade all ODPs in an ODP cluster
 
-If a new ODP version is available, you can upgrade all OBProxies in an ODP cluster in the OceanBase Cloud Platform (OCP) console.
+If a new ODP version is available, you can upgrade all OPDs in an ODP cluster in the OceanBase Cloud Platform (OCP) console.
 
 ## Procedure
 
@@ -8,15 +8,15 @@ If a new ODP version is available, you can upgrade all OBProxies in an ODP clust
 
 2. In the left-side navigation pane, click **OBProxy**.
 
-3. In the ODP cluster list, click the ODP cluster that you want to refresh to go to the **Overview** page of the ODP cluster.
+3. In the ODP cluster list, click the target ODP cluster to go to the **Overview** page of the ODP cluster.
 
-4. Click **Upgrade All**.
+4. Click **Upgrade All** from the **Actions** column.
 
-   ![09162144](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4963922361/p327469.png)
+   <!-- ![09162144](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4963922361/p327469.png) -->
 
 5. In the dialog box that appears, select a software package version to upgrade to.
 
-   ![08161435](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4963922361/p304959.png)
+   <!-- ![08161435](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4963922361/p304959.png) -->
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
@@ -34,4 +34,4 @@ If a new ODP version is available, you can upgrade all OBProxies in an ODP clust
 
    In the dialog box that appears, click **View Tasks** to view the progress.  If the value of the **Task Status** field is **Completed**, the upgrade succeeded.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5746081461/p352533.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5746081461/p352533.png) -->
