--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/5.restart-all-obproxy-nodes-in-obproxy-cluster.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/5.restart-all-obproxy-nodes-in-obproxy-cluster.md
@@ -1,6 +1,6 @@
-# Restart all OBProxies in an ODP cluster
+# Restart all ODPs in an ODP cluster
 
-This topic describes how to restart all OBProxies in an ODP cluster in the OceanBase Cloud Platform (OCP) console.
+This topic describes how to restart all ODPs in an ODP cluster in the OceanBase Cloud Platform (OCP) console.
 
 ## Prerequisites
 
@@ -16,14 +16,14 @@ Restarting an ODP interrupts the connection. Proceed with caution.
 
 2. In the left-side navigation pane, click **OBProxy**.
 
-3. In the ODP cluster list, click the ODP cluster that you want to refresh to go to the **Overview** page of the ODP cluster.
+3. In the ODP cluster list, click the target ODP cluster to go to the **Overview** page of the ODP cluster.
 
-4. Click **Restart All**.
+4. Click **Restart All** from the **Actions** column.
 
-   ![09162146](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3073922361/p327471.png)
+   <!-- ![09162146](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3073922361/p327471.png) -->
 
   <main id="notice" type='notice'>
-    <h4>Notice</h4>
+    <h4>Note</h4>
     <p>Restarting an ODP interrupts the connection. Proceed with caution. </p>
   </main>
 
@@ -31,4 +31,4 @@ Restarting an ODP interrupts the connection. Proceed with caution.
 
    In the dialog box that appears, you can click **View Tasks** to view the progress. If the value of the **Task Status** field is **Completed**, the ODP is restarted.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5716081461/p352534.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5716081461/p352534.png) -->
