--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
@@ -1,6 +1,6 @@
 # Start an ODP
 
-After you deploy an OceanBase Database Proxy (ODP, also known as OBProxy), you can run an SQL command to start a single obproxy process.
+After you deploy an ODP, you can run an SQL command to start a single obproxy process.
 
 ## Prerequisites
 
@@ -19,7 +19,7 @@ You can use one of the following methods to start an obproxy process:
 1. Log on as the admin user to the server that hosts the ODP to be started.
 
   <main id="notice" type='notice'>
-    <h4>Notice</h4>
+    <h4>Note</h4>
     <p>To start the ODP, log on as the admin user and run the startup command in the home directory of the ODP software. The ODP startup fails if you log on as other users or run the startup command in other directories. </p>
   </main>
 
@@ -42,7 +42,7 @@ You can use one of the following methods to start an obproxy process:
 
    Parameters:
 
-   * `-p` specifies the port number listened to by the ODP. The MySQL client uses this port to access OceanBase Database. The parameter is required for the first startup. You do not need to specify this parameter in subsequent startups or upgrades.
+   * `-p` specifies the listening port of the ODP. The MySQL client uses this port to access OceanBase Database. The parameter is required for the first startup. You do not need to specify this parameter in subsequent startups or upgrades.
 
    * `-r'ip:port'`: specifies the IP address and port number of the RootServer in the specified OceanBase cluster. The port is the SQL port of the OBServer node, not the RPC port.
 
@@ -74,7 +74,7 @@ You can use one of the following methods to start an obproxy process:
 
    Parameters:
 
-   * `-p` specifies the port number listened to by the ODP. The MySQL client uses this port to access OceanBase Database. The parameter is required for the first startup. You do not need to specify this parameter in subsequent startups or upgrades.
+   * `-p` specifies the listening port of the ODP. The MySQL client uses this port to access OceanBase Database. The parameter is required for the first startup. You do not need to specify this parameter in subsequent startups or upgrades.
 
    * `-e` specifies to create a table. We recommend that you specify this parameter only for the first startup of the ODP. You do not need to specify the parameter in subsequent startups or upgrades.
 
