--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/4.stop-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/4.stop-obproxy.md
@@ -2,7 +2,7 @@
 
 After you deploy an ODP, the obproxy process is started by default. You can run an SQL command to stop a single obproxy process.
 
-## Stop the obproxy process
+## Stop an obproxy process
 
 1. Log on as the admin user to the server on which the obproxy process runs.
 
