--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/4.odp-cluster-parameters.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/4.odp-cluster-parameters.md
@@ -1,6 +1,6 @@
 # ODP startup parameters
 
-When you create an OceanBase Database Proxy (ODP, also known as OBProxy) cluster, you can specify the startup parameters in Parameter Settings. This topic describes the ODP startup parameters.
+When you create an OceanBase Database Proxy (ODP, also known as OBProxy) cluster, you can specify the startup parameters in **Parameter Settings**. This topic describes the ODP startup parameters.
 
 ## Startup parameters
 
@@ -13,7 +13,7 @@ The following table describes the startup parameters that you can specify when y
 | block_thread_num | 1 | \[1, 4\] | The number of ODP threads for blocking tasks. The parameter is used for thread initialization.  |
 | enable_cpu_topology | false | <ul><li>true</li> <li>false</li></ul> | Specifies whether to enable CPU affinity, which is a process in which each worker thread is associated with a different CPU core.  |
 | enable_metadb_used | false | <ul><li>true</li> <li>false</li></ul> | Specifies whether the MetaDB of OceanBase Cloud Platform (OCP) is accessible when ODP is running.  |
-| enable_strict_kernel_release | false | <ul><li>true</li> <li>false</li></ul> | Specifies whether the OS kernel must be verified.  </br>Valid values: <ul><li>`true`: specifies to verify the OS kernel only on 5U, 6U, and 7U rackmount servers running on the RedHat operating system. </li> <li>`false`: specifies not to verify the OS kernel, which may make OBProxies unstable. </li></ul> |
+| enable_strict_kernel_release | false | <ul><li>true</li> <li>false</li></ul> | Specifies whether the OS kernel must be verified.  </br>Valid values: <ul><li>`true`: specifies to verify the OS kernel only on 5U, 6U, and 7U rackmount servers running on the RedHat operating system. </li> <li>`false`: specifies not to verify the OS kernel, which may make ODPs unstable. </li></ul> |
 | frequent_accept | true | <ul><li>true</li> <li>false</li></ul> | Specifies whether to initialize the net accept parameter.  |
 | grpc_client_num | 9 | \[9,16\] | The number of gRPC clients.  |
 | grpc_thread_num | 8 | \[8,16\] | The number of gRPC threads.  |
@@ -33,6 +33,6 @@ The following table describes the startup parameters that you can specify when y
 | task_thread_num | 2 | \[1, 4\] | The number of task threads for the ODP.  |
 | work_thread_num | 128 | \[1, 128\] | The number of worker threads for the ODP.  If the `automatic_match_work_thread` parameter is set to `true`, the `work_thread_num` parameter specifies the maximum number of worker threads.  |
 
-## References
+<!-- ## References
 
-ODP parameters include startup parameters and other parameters. For information about other parameters, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784).
+ODP parameters include startup parameters and other parameters. For information about other parameters, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784). -->
