--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/4.physical-connection.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/4.physical-connection.md
@@ -1,6 +1,6 @@
 # Physical connections
 
-This topic describes the two methods that you can use to query network connections on an OceanBase Database Proxy (ODP).
+This topic describes two methods that you can use to query network connections on an OceanBase Database Proxy (ODP).
 
 ## Query the number of sessions in the current tenant and the session IDs
 
