--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/2.displays-the-status-of-a-session.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/2.displays-the-status-of-a-session.md
@@ -114,7 +114,7 @@ The following table describes the fields in the returned result.
 
 The following table describes the general attributes.
 
-| Field | Description |
+| Attribute | Description |
 |------------------------|---------------------------------|
 | proxy_sessid | The session ID of the ODP. |
 | cluster | The name of the cluster. |
