--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/3.displays-session-statistics.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/3.displays-session-statistics.md
@@ -216,7 +216,7 @@ The following table describes the fields in the returned result.
 
 The following table describes the internal metrics.
 
-| Field | Description |
+| Metric | Description |
 |--------------------------------------|------------------------------------|
 | total_transaction_count | The total number of transactions. |
 | client_request_total_size | The total size of the request data. |
