--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/1.odp-table-routing.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/1.odp-table-routing.md
@@ -18,7 +18,7 @@ You may encounter one of the following situations:
 
 * The IP address exists in the location cache but is unavailable. In this case, ODP removes the IP address from the location cache and pulls a new IP address.
 
-For more information about the location cache, see [Intra-tenant routing](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982783).
+<!-- For more information about the location cache, see [Intra-tenant routing](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982783). -->
 
 ## Routing based on partitioned tables
 
