--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/4.transaction-routing.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/4.transaction-routing.md
@@ -7,7 +7,7 @@ The OB 2.0 protocol is used to synchronize the transaction status.
 
 ## Select nodes for transaction routing
 
-Two types of nodes are available for transaction routing: coordinator and participant. The coordinator node is the node that starts the transaction. It executes non-DML statements that affect the transaction status, such as `BEGIN`,`START TRANSACTION`, `COMMIT`, and`ROLLBACK`. The participant nodes execute DML statements that do not affect the transaction status.
+Two types of nodes are available for transaction routing: coordinator and participant. The coordinator node is the node that starts the transaction. It executes non-DML statements that affect the transaction status, such as `BEGIN`,`START TRANSACTION`, `COMMIT`, and `ROLLBACK`. The participant nodes execute DML statements that do not affect the transaction status.
 ODP comprises a simple SQL parser that parses whether an SQL statement is a DML statement. For a DML statement, ODP routes the statement to proper nodes based on table routing or logical data center (LDC)-based routing. The routed-to nodes are participant nodes of the transaction. The coordinator node executes the first statement in the transaction. 
 
 ## Configure transaction routing
@@ -15,7 +15,7 @@ ODP comprises a simple SQL parser that parses whether an SQL statement is a DML 
 By default, transaction routing is enabled. You can execute the following statements to query whether transaction routing is enabled and configure transaction routing. 
 
 1. Log on to the sys tenant as the root user. 
-2. Check and modify the configuration of the OB V2.0 protocol to ensure that the protocol is enabled. 
+2. Check and modify the configuration of the OB 2.0 protocol to ensure that the protocol is enabled. 
 
    ```shell
    obclient> SHOW PROXYCONFIG LIKE enable_ob_protocol_v2;
