--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/2.manage-clusters.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/2.manage-clusters.md
@@ -6,11 +6,11 @@ During routine O&M, you can restart, stop, delete, and upgrade a cluster.
 
 * The target cluster can be managed in OceanBase Cloud Platform (OCP).
 
-   If the cluster has not been added to OCP, contact the administrator to add the cluster to OCP. For more information, see the "**Take over a cluster**" topic in OCP User Guide of the corresponding version.
+   If the cluster has not been added to OCP, contact the administrator to add the cluster to OCP. For more information, see the **Take over a cluster** topic in OCP User Guide of the corresponding version.
 
 * You have permissions of the **CLUSTER_MANAGER** role.
 
-   If you do not have permissions of the role, contact the administrator to obtain the permissions. For more information, see the "**Edit a user**" topic in OCP User Guide of the corresponding version.
+   If you do not have permissions of the role, contact the administrator to obtain the permissions. For more information, see the **Edit a user** topic in OCP User Guide of the corresponding version.
 
 ## View cluster information
 
@@ -18,7 +18,7 @@ During routine O&M, you can restart, stop, delete, and upgrade a cluster.
 
    The **Clusters** page automatically appears.
 
-2. In the **Clusters** section, view the names, IDs, versions, deployment modes, and statuses of all clusters managed in OCP.
+2. In the **Clusters** section, view the names, versions, deployment modes, and statuses of all clusters managed in OCP.
 
 3. Click the name of the target cluster to go to the **Overview** page of the cluster.
 
@@ -46,11 +46,11 @@ If the OceanBase cluster has less than three replicas, the business will be inte
 
 4. Set **Restart Scope** to **All**, a zone, or several zones.
 
-   * If you set Restart Scope to **All**, the system will restart the observer processes of all nodes in the cluster.
+   * If you set **Restart Scope** to **All**, the system will restart the observer processes of all nodes in the cluster.
 
-   * If you set Restart Scope to specific zones, the system will restart the observer processes of these zones.
+   * If you set **Restart Scope** to specific zones, the system will restart the observer processes of these zones.
 
-   ![Restart](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/restart-cluster.png)
+   <!-- ![Restart](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/restart-cluster.png) -->
 
 5. Click **Restart**.
 
@@ -74,7 +74,7 @@ You can delete an OceanBase cluster that is no longer in use in OCP.
 
 4. In the **Delete Cluster** dialog box, enter delete.
 
-   ![delete](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/cluster-management/delete-ob-cluster.png)
+   <!-- ![delete](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/cluster-management/delete-ob-cluster.png) -->
 
 5. Click **Delete**.
 
