--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/3.manage-cluster-parameters/1.overview-of-cluster-parameter-management.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/3.manage-cluster-parameters/1.overview-of-cluster-parameter-management.md
@@ -31,4 +31,4 @@ For more information about how to view and set tenant parameters, see the follow
 
 * [Modify tenant parameters](../../4.manage-tenants/18.manage-tenant-parameters/3.modify-tenant-parameters.md)
 
-For more information about the system parameters of OceanBase Database, see [Overview](../../2.configuration-management/1.configuration-management-introduction.md).
+<!-- For more information about the system parameters of OceanBase Database, see [Overview](../../2.configuration-management/1.configuration-management-introduction.md). -->
