--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/3.manage-cluster-parameters/3.manager-modify-the-cluster-parameters.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/3.manage-cluster-parameters/3.manager-modify-the-cluster-parameters.md
@@ -70,7 +70,7 @@ For more information about cluster-level parameters in OceanBase Database, see [
 
 2. Modify or add parameters in the configuration file.
 
-   For more information about the meaning of each module in the configuration file, see [Configuration file](https://www.oceanbase.com/docs/community-obd-cn-10000000001031923).
+   For more information about the meaning of each module in the configuration file, see [Configuration file](https://en.oceanbase.com/docs/community-obd-en-10000000000842677).
 
    If the parameter to be modified does not exist in the configuration file, you can manually add it to the global or node configurations based on the effective scope.
 
