--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/1.overview-of-database-connection-and-routing.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/1.overview-of-database-connection-and-routing.md
@@ -43,9 +43,9 @@ As an important feature of OceanBase Database, routing enables quick data access
 
 A partition is a basic unit of data storage in OceanBase Database. After a table is created, mappings between the table and its partitions are generated. If the primary/standby mode is not adopted, a non-partitioned table maps to one partition. A partitioned table maps to multiple partitions.
 
-Based on the routing feature, a query can be accurately routed to the OBServer node where the desired data is located. In addition, a read request without high consistency requirements can be routed to an OBServer node where a replica is located. This maximizes the usage of server resources. During the routing process, SQL statements, configuration rules, and OBServer status are used as the input, and an available OBServer IP address is generated as the output. The following figure shows the routing logic.
+Based on the routing feature, a query can be accurately routed to the OBServer node where the desired data is located. In addition, a read request without high consistency requirements can be routed to an OBServer node where a replica is located. This maximizes the usage of server resources. During the routing process, SQL statements, configuration rules, and OBServer status are used as the input, and an available OBServer IP address is generated as the output. <!-- The following figure shows the routing logic. -->
 
-![Routing](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6972700461/p369025.jpg)
+<!-- ![Routing](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6972700461/p369025.jpg) -->
 
 The custom parser module of ODP is used to parse SQL statements. ODP needs only to parse the database names, table names, and hints in DML statements. No complex expression analysis is required.
 
@@ -53,4 +53,4 @@ ODP needs to determine the optimal routing rule based on different conditions. F
 
 Based on the request SQL statements of a user, ODP obtains the IP address of the OBServer node where the corresponding replica is located. ODP attempts to obtain the route table first from the local cache, then from the global cache, and finally from the OBServer node by initiating an asynchronous query task. ODP uses the trigger mechanism to update the route table. ODP forwards requests to OBServer nodes based on the route table. If a request cannot be locally processed by an OBServer node, the OBServer node places the feedback in the response packet and sends the packet to ODP. ODP determines whether to forcibly update the route table in the local cache based on the feedback. Generally, the route table changes only when an OBServer node undergoes a major compaction or when leader switching is caused by load balancing.
 
-ODP selects an OBServer node from the route table based on the determined routing rule in the previous step and forwards requests to the OBServer node after this OBServer node passes the blacklist and graylist checks.
+ODP selects an OBServer node from the route table based on the determined routing rule in the previous step and forwards requests to the OBServer node after this OBServer node passes the blocklist and graylist checks.
