--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/1.create-an-obproxy-cluster.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/1.create-an-obproxy-cluster.md
@@ -1,10 +1,10 @@
 # Create an ODP cluster
 
-An OceanBase cluster is created when you deploy OceanBase Database. If you want to add multiple OBProxies and connect the OBProxies to the OceanBase cluster, you can create an ODP cluster by using OceanBase Cloud Platform (OCP).
+An OceanBase cluster is created when you deploy OceanBase Database. If you want to add multiple ODPs and connect the ODPs to the OceanBase cluster, you can create an ODP cluster by using OceanBase Cloud Platform (OCP).
 
 ## Prerequisites
 
-You have logged on to the OCP console and are assigned the OBPROXY_MANAGER role that has permissions to manage OBProxies. If you are not assigned the OBPROXY_MANAGER role, you must obtain the role. For more information, see [Edit a user](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000777155) in the OCP User Guide.
+You have logged on to the OCP console and are assigned the OBPROXY_MANAGER role that has permissions to manage ODPs. If you are not assigned the OBPROXY_MANAGER role, you must obtain the role. For more information, see [Edit a user](https://en.oceanbase.com/docs/community-ocp-en-10000000000840088) in the OCP User Guide.
 
 ## Procedure
 
@@ -16,21 +16,21 @@ You have logged on to the OCP console and are assigned the OBPROXY_MANAGER role 
 
 4. On the **Create OBProxy Cluster** page, specify the following information:
 
-   1. Set related parameters to specify the basic information. The following table describes the parameters****.
+   1. Set related parameters to specify the basic information.
 
       | Parameter | Description |
       |------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
       | Cluster Name | The name of the cluster. The cluster name can contain letters, digits, and underscores (_), and must be unique and start with a letter.  |
       | Access URL | The URL of the ODP cluster. For a virtual IP (VIP) address, you must apply for the VIP and bind it to the ODP server.  |
-      | Access Port | The access port. The default port is 2883. You must specify the actual port based on the VIP.  |
+      | Access Port Number | The access port. The default port is 2883. You must specify the actual port based on the VIP.  |
       | Startup Method | The startup method of the ODP cluster. Valid values: <ul><li>ConfigUrl: specifies the multicluster startup method, where the ODP cluster can access multiple OceanBase clusters. </li>  <li>RsList: specifies the single cluster startup method, where the ODP cluster can only access the OceanBase cluster specified when the ODP cluster is created. After an ODP cluster is created, no more connectable OceanBase clusters can be added. </li></ul> |
-      | Connectable OceanBase Cluster | The OceanBase clusters that are accessible to the ODP cluster.  <ul><li>This field is optional when **Startup Method** is ConfigUrl. After the cluster is created, you can click [Add Connectable OceanBase Cluster](../2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md) to add more OceanBase clusters. </li> <li>You must specify the value of this field when **Startup Method** is RsList.  Select the OceanBase cluster from the drop-down list. <ul><li>If the password box contains the credentials of the proxyro user of the cluster, the proxyro user is selected by default. </li> <li>Otherwise, click **Create Connection** to create a connection credential for the proxyro user of the cluster. For more information, see [OCP User Guide](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775771). </li></ul></li></ul> |
+      | Accessible OceanBase Clusters | The OceanBase clusters that are accessible to the ODP cluster.  <ul><li>This field is optional when **Startup Method** is ConfigUrl. After the cluster is created, you can click [Add Connectable OceanBase Cluster](../2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md) to add more OceanBase clusters. </li> <li>You must specify the value of this field when **Startup Method** is RsList.  Select the OceanBase cluster from the drop-down list. <ul><li>If the password box contains the credentials of the proxyro user of the cluster, the proxyro user is selected by default. </li> <li>Otherwise, click **Create Connection** to create a connection credential for the proxyro user of the cluster. For more information, see [OCP User Guide](https://en.oceanbase.com/docs/community-ocp-en-10000000000839919). </li></ul></li></ul> |
 
-      ![08261923](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2334601361/p312780.png)
+      <!-- ![08261923](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2334601361/p312780.png) -->
 
    2. Optional. Set parameters on the **Deploy OBProxy** page.
 
-      If you want to deploy an ODP when you create an ODP cluster, specify the fields described in this step. Otherwise, you can skip this step. After the cluster is created, you can add OBProxies to the cluster by taking over OBProxies or adding OBProxies.
+      If you want to deploy an ODP when you create an ODP cluster, specify the fields described in this step. Otherwise, you can skip this step. After the cluster is created, you can add ODPs to the cluster by taking over ODPs or adding ODPs.
 
       1. Toggle on the switch in the upper-right corner of the **Deploy OBProxy** page.
 
@@ -41,18 +41,18 @@ You have logged on to the OCP console and are assigned the OBPROXY_MANAGER role 
          | SQL Port Number | The default port is 2883.  |
          | Exporter Port Number | The default port is 2884.  |
          | Software version | Select the version of the ODP RPM to install.  |
-         | Fields about ODP hosts | Configure the host where ODP is deployed by specifying the following fields: IDC, Host Type (Optional), Selection Method, and Host IP Address.  |
+         | Fields about ODP hosts | Configure the host where ODP is deployed by specifying the following information: IDC, host type (optional), and host IP address.  |
 
-         ![08261945](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2334601361/p312784.png)
+         <!-- ![08261945](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2334601361/p312784.png) -->
 
          By default, fields for two hosts are displayed.
 
          * To deploy more hosts, click **Add OBProxy** to add a host.
 
-         * If you need to deploy only one ODP host, click the Delete icon next to the Host IP Address field to delete the host.
+         * If you need to deploy only one ODP host, click the **Delete** icon next to the **Host** field to delete the host.
 
-   3. Enable **Advanced Settings**, and add or modify the startup parameters and other parameters. For more information about other parameters, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784). For more information about startup parameters, see [ODP startup parameters](../4.odp-cluster-parameters.md).
+   3. Enable **Parameter Settings**, and add or modify the startup parameters and other parameters. <!-- For more information about other parameters, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784). -->For more information about startup parameters, see [ODP startup parameters](../4.odp-cluster-parameters.md). 
 
-      ![4](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8232382161/p240600.png)
+      <!-- ![4](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8232382161/p240600.png) -->
 
 5. Click **Submit**.
