--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/2.obproxy-cluster-parameter-management.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/2.obproxy-cluster-parameter-management.md
@@ -1,6 +1,6 @@
 # Manage ODP cluster parameters
 
-OceanBase Cloud Platform (OCP) allows you to view and modify parameters of an ODP cluster on the **Parameters** and **Change History** tabs of the Parameter Management page.
+OceanBase Cloud Platform (OCP) allows you to view and modify parameters of an ODP cluster on the **Parameters** and **Change History** tabs of the **Parameter Management** page.
 
 ## View parameters
 
@@ -10,13 +10,13 @@ OceanBase Cloud Platform (OCP) allows you to view and modify parameters of an OD
 
 3. In the ODP cluster list, click the ODP cluster whose parameters you want to view. Then, go to the **Parameters** tab on the **Parameter Management** page.
 
-   You can search for parameters on the **Parameters** tab to view the information about specific parameters. You can also view information such as the parameter name, value, description, and whether a restart is required for the modification to take effect****************, and modify the parameters.
+   You can search for parameters on the **Parameters** tab to view the information about specific parameters. You can also view information such as the parameter name, value, description, and whether a restart is required for the modification to take effect, and modify the parameters.
 
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9972988061/p200028.png)
+   <!-- ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9972988061/p200028.png) -->
 
    You can click **Change Value** in the **Actions** column, enter the new value in the dialog box that appears, and click **OK** to complete the modification.
 
-   For more information about the parameters of an ODP cluster, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784).
+   <!-- For more information about the parameters of an ODP cluster, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784). -->
 
 ## View change history
 
@@ -28,4 +28,4 @@ OceanBase Cloud Platform (OCP) allows you to view and modify parameters of an OD
 
    On the **Change History** tab, you can specify the following fields: **Date of Modification**, **Parameter Name**, and **Changed By**. Then, click **Search** to filter parameters. In the parameter list, you can view the information in the following columns: **Parameter**, **Value Before Change**, **Value After Change**, **Modified At**, and **Changed By**.
 
-   ![015](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0082988061/p201535.png)
+   <!-- ![015](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0082988061/p201535.png) -->
