--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md
@@ -8,19 +8,19 @@ This topic describes how to connect an OceanBase cluster to an ODP or delete an 
 
 2. In the left-side navigation pane, click **OBProxy**.
 
-3. In the ODP cluster list, click the ODP cluster to which you want to connect an ODP. Then, the Overview page of the ODP cluster appears.
+3. In the ODP cluster list, click the ODP cluster to which you want to connect an ODP. Then, the **Overview** page of the ODP cluster appears.
 
 4. Click **Add Connectable OceanBase Cluster**.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3640360261/p271529.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3640360261/p271529.png) -->
 
 5. In the dialog box that appears on the right, select the connectable OceanBase cluster to add to the ODP.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6589360261/p271754.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6589360261/p271754.png) -->
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>Otherwise, click <strong>Create Connection</strong> to create a connection credential for the proxyro user of the cluster. For more information, see <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775977">Create a connection</a>. </p>
+    <p>Otherwise, click <strong>Create Connection</strong> to create a connection credential for the proxyro user of the cluster. For more information, see <a href="https://en.oceanbase.com/docs/community-ocp-en-10000000000840128">Create a connection</a>. </p>
   </main>
 
 6. Click **OK**.
@@ -28,18 +28,18 @@ This topic describes how to connect an OceanBase cluster to an ODP or delete an 
 ## Delete a connected OceanBase cluster
 
   <main id="notice" type='notice'>
-    <h4>Notice</h4>
-    <p>After you delete an OceanBase cluster connected to an ODP cluster, the OBProxies of the ODP cluster cannot access the OceanBase cluster. Proceed with caution. </p>
+    <h4>Note</h4>
+    <p>After you delete an OceanBase cluster connected to an ODP cluster, the ODPs of the ODP cluster cannot access the OceanBase cluster. Proceed with caution. </p>
   </main>
 
 1. Log on to the OCP console.
 
 2. In the left-side navigation pane, click **OBProxy**.
 
-3. In the ODP cluster list, click the ODP cluster that you want to refresh to go to the **Overview** page of the ODP cluster.
+3. In the ODP cluster list, click the target ODP cluster to go to the **Overview** page of the ODP cluster.
 
-4. In the **Connectable OceanBase Clusters** section, click **Delete** in the Actions column of the cluster to delete.
+4. In the **Connectable OceanBase Clusters** section, click **Delete** in the **Actions** column of the cluster to delete.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6620460261/p271769.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6620460261/p271769.png) -->
 
 5. In the dialog box that appears, click **OK**.
