--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/1.add-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/1.add-obproxy.md
@@ -12,23 +12,23 @@ An ODP cluster is created. For more information, see [Create an ODP cluster](../
 
 2. In the left-side navigation pane, click **OBProxy**.
 
-3. In the ODP cluster list, click the ODP cluster to which you want to connect an ODP. Then, the Overview page of the ODP cluster appears.
+3. In the ODP cluster list, click the ODP cluster to which you want to connect an ODP. Then, the **Overview** page of the ODP cluster appears.
 
 4. Click **Add OBProxy**.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2426081461/p352396.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2426081461/p352396.png) -->
 
-5. In the dialog box that appears, specify the following parameters: **Software Version**, **IDC**, **SQL Port Number**, **Exporter Port Number**, **IDC**, **Host Type**, **Selection Method**, and **Host**.
+5. In the dialog box that appears, specify the following parameters: **Software Version**, **SQL Port Number**, **Exporter Port Number**, **IDC**, **Host Type**, and **Host**.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6921780261/p273264.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6921780261/p273264.png) -->
 
    The following table describes the parameters.
 
    | Parameter | Description |
    |---------------|----------------------------------------------------|
+   | Software Version | Select the version of the ODP RPM to install.  |
    | SQL Port Number | The default port is 2883.  |
    | Exporter Port Number | The default port is 2884.  |
-   | Software version | Select the version of the ODP RPM to install.  |
-   | Fields about ODP hosts | Configure information about the host where the ODP is deployed, including IDC, Host Type (Optional), Selection Method, and Host IP Address.  |
+   | Fields about ODP hosts | Configure information about the host where the ODP is deployed, including IDC, host type (optional), and Host IP address.  |
 
 6. Click **OK**.
