--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/7.upgrade-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/7.upgrade-obproxy.md
@@ -1,6 +1,6 @@
-# Upgrade one or more OBProxies
+# Upgrade one or more ODPs
 
-If a new ODP version is available, you can upgrade one or more OBProxies in the OceanBase Cloud Platform (OCP) console.
+If a new ODP version is available, you can upgrade one or more ODPs in the OceanBase Cloud Platform (OCP) console.
 
 ## Prerequisites
 
@@ -12,24 +12,24 @@ You have logged on to the OCP console and are granted permissions on the ODP tha
 
 2. In the left-side navigation pane, click **OBProxy**.
 
-3. In the ODP cluster list, click the ODP cluster that you want to refresh to go to the **Overview** page of the ODP cluster.
+3. In the ODP cluster list, click the target ODP cluster to go to the **Overview** page of the ODP cluster.
 
 4. Perform the following operations:
 
    * In the **OBProxies** section, find the ODP that you want to upgrade and click **Upgrade** in the **Actions** column. In the dialog box that appears, select or upload a package of the new version and then click **OK**.
 
-      ![Upgrade a single ODP](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0136929061/p204438.png)
+      <!-- ![Upgrade a single ODP](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0136929061/p204438.png) -->
 
-   * In the **OBProxies** section, select the OBProxies that you want to upgrade and click **Batch Upgrade** in the upper-right corner of the list. In the dialog box that appears, click **OK**.
+   * In the **OBProxies** section, select the ODPs that you want to upgrade and click **Batch Upgrade** in the upper-right corner of the list. In the dialog box that appears, click **OK**.
 
-      ![Batch upgrade OBProxies](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0136929061/p204455.png)
+      <!-- ![Batch upgrade OBProxies](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0136929061/p204455.png) -->
 
 5. In the dialog box that appears, select **Upgrade Version**.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3139360261/p271762.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3139360261/p271762.png) -->
 
   <main id="notice" type='explain'>
-    <h4>Description</h4>
+    <h4>Note</h4>
     <ul>
     <li>
     <p>You can select only a version that is later than the current highest version. </p>
@@ -44,8 +44,8 @@ You have logged on to the OCP console and are granted permissions on the ODP tha
 
    In the dialog box that appears, click **View Tasks** to view the progress. If the value of the **Task Status** field is **Completed**, the upgrade succeeded.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6695081461/p352532.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6695081461/p352532.png) -->
 
-## References
+## Related topics
 
 For more information about how to upgrade all ODPs in an ODP cluster, see [Upgrade all ODPs in an ODP cluster](../2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md).
