--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md
@@ -1,12 +1,12 @@
-# Blacklist mechanism
+# Blocklist mechanism
 
-OceanBase Database Proxy (ODP, also known as OBProxy) uses the blacklist mechanism to implement self-adaptive access control for operations such as off-peak major compaction, upgrade, leader switchover, downtime, startup, and shutdown on OBServer nodes.
+OceanBase Database Proxy (ODP, also known as OBProxy) uses the blocklist mechanism to implement self-adaptive access control for operations such as off-peak major compaction, upgrade, leader switchover, downtime, startup, and shutdown on OBServer nodes.
 
 ## Background
 
-ODP supports two types of blacklists: down blacklist and live-but-unavailable blacklist. You can manage blacklists by setting the corresponding parameters.
+ODP supports two types of blocklists: down blocklist and live-but-unavailable blocklist. You can manage blocklists by setting the corresponding parameters.
 
-You can use a blacklist to implement access control in the following scenarios:
+You can use a blocklist to implement access control in the following scenarios:
 
 * Ensure that a zone involved in an off-peak major compaction cannot be accessed.
 
@@ -20,39 +20,39 @@ You can use a blacklist to implement access control in the following scenarios:
 
 * Ensure that, when an OBServer node becomes alive but unavailable (for example, when the memory usage exceeds the specified threshold, the timeout period elapses, the OBServer node is initialized, or the observer process exits), ODP retries accessing other OBServer nodes.
 
-## Down blacklist
+## Down blocklist
 
-If an OBServer node is detected to be down or has suspended service provision after you execute the `stop server` command, the OBServer node is added to the down blacklist. When this OBServer node is considered normal, it is removed from the blacklist. Applications do not access OBServer nodes in the blacklist.
+If an OBServer node is detected to be down or has suspended service provision after you execute the `stop server` command, the OBServer node is added to the down blocklist. When this OBServer node is considered normal, it is removed from the blocklist. Applications do not access OBServer nodes in the blocklist.
 
-An OBServer node is added to the down blacklist in one of the following cases:
+An OBServer node is added to the down blocklist in one of the following cases:
 
 * The value of the `start_service_time` parameter is 0.
 
 * The value of the `status` parameter is `inactive`.
 
-## Alive-but-unavailable blacklist
+## Alive-but-unavailable blocklist
 
-The status of an OBServer node in a live-but-unavailable blacklist is temporary or uncertain. This differentiates it from a down blacklist. The system retries accessing it periodically. It is removed from the blacklist after it is found to be normal again.
+The status of an OBServer node in a live-but-unavailable blocklist is temporary or uncertain. This differentiates it from a down blocklist. The system retries accessing it periodically. It is removed from the blocklist after it is found to be normal again.
 
-An OBServer node is added to the live-but-unavailable blacklist in one of the following cases:
+An OBServer node is added to the live-but-unavailable blocklist in one of the following cases:
 
 * The local zone is undergoing a major compaction or an upgrade.
 
 * The OBServer node is undergoing a major compaction or an upgrade.
 
-* When an OBServer node is alive, errors that occur are returned in error packages. The alive-but-unavailable count of an OBServer node increases by 1 if the OBServer node returns a system error in one of the following cases: the OBServer node reaches the resource limit, connection limit, or memory limit, encounters a packet verification error, a response timeout error, a client connection timeout error, or an ODP timeout error, is being initialized, or the observer process is exiting. If the alive-but-unavailable count of an OBServer node reaches M within N seconds, this OBServer node is added to the alive-but-unavailable blacklist.
+* When an OBServer node is alive, errors that occur are returned in error packages. The alive-but-unavailable count of an OBServer node increases by 1 if the OBServer node returns a system error in one of the following cases: the OBServer node reaches the resource limit, connection limit, or memory limit, encounters a packet verification error, a response timeout error, a client connection timeout error, or an ODP timeout error, is being initialized, or the observer process is exiting. If the alive-but-unavailable count of an OBServer node reaches M within N seconds, this OBServer node is added to the alive-but-unavailable blocklist.
 
-* After an off-peak major compaction begins, Root Service first updates internal tables to set the major compaction status of the relevant zone, and then switches the leaders from this zone to other zones. ODP periodically updates the zone status table to set the zone status. After the status of the relevant zone is updated, all OBServer nodes in this zone are set to the alive-but-unavailable state. During an off-peak major compaction, all OBServer nodes in a zone that is undergoing a major compaction are in the alive-but-unavailable blacklist.
+* After an off-peak major compaction begins, Root Service first updates internal tables to set the major compaction status of the relevant zone, and then switches the leaders from this zone to other zones. ODP periodically updates the zone status table to set the zone status. After the status of the relevant zone is updated, all OBServer nodes in this zone are set to the alive-but-unavailable state. During an off-peak major compaction, all OBServer nodes in a zone that is undergoing a major compaction are in the alive-but-unavailable blocklist.
 
 ## Blacklist priorities
 
-The down blacklist has a higher priority than the alive-but-unavailable blacklist. The priority of a major compaction or an upgrade of a zone is higher than that of an OBServer node.
+The down blocklist has a higher priority than the alive-but-unavailable blocklist. The priority of a major compaction or an upgrade of a zone is higher than that of an OBServer node.
 
-## Force access OBServer nodes in the blacklist
+## Force access OBServer nodes in the blocklist
 
-When no OBServer nodes are available, the system force accesses OBServer nodes in the blacklist.
+When no OBServer nodes are available, the system force accesses OBServer nodes in the blocklist.
 
-## Blacklist parameters
+## Blocklist parameters
 
 1. Log on to the `sys` tenant as the root user from a client.
 
@@ -64,22 +64,22 @@ When no OBServer nodes are available, the system force accesses OBServer nodes i
 
 3. To modify a parameter, use the`ALTER proxyconfig SET key=value` statement. The modification takes effect immediately.
 
-   The following table describes the configuration parameters that are related to blacklists.
+   The following table describes the configuration parameters that are related to blocklists.
 
    | **Parameter** | **Description** |
    |-------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-   | enable_congestion | Specifies whether the blacklist mechanism is enabled. By default, the blacklist mechanism is enabled. When the blacklist mechanism malfunctions, you can temporarily disable it by modifying this parameter so that ODP can properly work.  |
-   | congestion_failure_threshold | Specifies the number of failures within N seconds after which an OBServer node is added to the blacklist. If the value of this parameter is smaller than 0, all OBServer nodes are removed from the blacklist.  |
-   | congestion_fail_window | The interval at which the number of errors is reset to zero. Unit: seconds. The default value of this parameter is 120 seconds. If, within this cycle, the number of errors exceeds the value specified by `congestion_failure_threshold`, the OBServer node is added to the blacklist. You can modify the value of this parameter in real time. After you modify this parameter, the current error count is reset to zero in the new fail window.  |
-   | congestion_retry_interval | The interval at which ODP retries to access an alive-but-unavailable OBServer node in the blacklist. Default value: 20. Unit: seconds.  |
-   | min_keep_congestion_interval | The period after which an OBServer node is removed from the blacklist.  |
-   | min_congested_connect_timeout | The timeout period of client connections. When a connection times out, the OBServer node is added to the alive-but-unavailable blacklist. Default value: 10. Unit: s.  |
+   | enable_congestion | Specifies whether the blocklist mechanism is enabled. By default, the blocklist mechanism is enabled. When the blocklist mechanism malfunctions, you can temporarily disable it by modifying this parameter so that ODP can properly work.  |
+   | congestion_failure_threshold | Specifies the number of failures within N seconds after which an OBServer node is added to the blocklist. If the value of this parameter is smaller than 0, all OBServer nodes are removed from the blocklist.  |
+   | congestion_fail_window | The interval at which the number of errors is reset to zero. Unit: seconds. The default value of this parameter is 120 seconds. If, within this cycle, the number of errors exceeds the value specified by `congestion_failure_threshold`, the OBServer node is added to the blocklist. You can modify the value of this parameter in real time. After you modify this parameter, the current error count is reset to zero in the new fail window.  |
+   | congestion_retry_interval | The interval at which ODP retries to access an alive-but-unavailable OBServer node in the blocklist. Default value: 20. Unit: seconds.  |
+   | min_keep_congestion_interval | The period after which an OBServer node is removed from the blocklist.  |
+   | min_congested_connect_timeout | The timeout period of client connections. When a connection times out, the OBServer node is added to the alive-but-unavailable blocklist. Default value: 10. Unit: s.  |
 
-## Query blacklists
+## Query blocklists
 
 1. Log on to the `sys` tenant as the `root` user from a client.
 
-2. Execute the following statement to view the blacklist information.
+2. Execute the following statement to view the blocklist information.
 
    Sample statement:
 
@@ -89,11 +89,11 @@ When no OBServer nodes are available, the system force accesses OBServer nodes i
 
    Parameters:
 
-   * If no option is specified, the blacklists of all clusters are retrieved.
+   * If no option is specified, the blocklists of all clusters are retrieved.
 
-   * If only the `all` option is specified, OBServer nodes of all clusters, including OBServer nodes in and those not in the blacklists, are retrieved.
+   * If only the `all` option is specified, OBServer nodes of all clusters, including OBServer nodes in and those not in the blocklists, are retrieved.
 
-   * If only the `clustername` option is specified, the blacklists of the specified cluster are retrieved.
+   * If only the `clustername` option is specified, the blocklists of the specified cluster are retrieved.
 
    * If both the `all` and `clustername` options are specified, the OBServer nodes of the specified cluster are retrieved.
 
@@ -261,7 +261,7 @@ When no OBServer nodes are available, the system force accesses OBServer nodes i
     <h4>Note</h4>
     <ul>
     <li>
-    <p>When <code>dead_congested</code> or <code>alive_congested</code> is set to <code>0</code>, the OBServer node has been added to the blacklist. </p>
+    <p>When <code>dead_congested</code> or <code>alive_congested</code> is set to <code>0</code>, the OBServer node has been added to the blocklist. </p>
     </li>
     <li>
     <p><code>clustername</code> does not need to be enclosed in single or double quotation marks in versions earlier than ODP V1.1.2. It must be enclosed in single or double quotation marks in ODP V1.1.2 and later. </p>
