--- a/zh-CN/13.reference-guide/3.system-configuration-items/124.memory_reserved.md
+++ b/zh-CN/13.reference-guide/3.system-configuration-items/124.memory_reserved.md
@@ -1,8 +1,6 @@
-memory_reserved 
-====================================
+# memory_reserved
 
-memory_reserved 用于设置系统预留内存的大小。
-
+`memory_reserved` 用于设置系统底层模块预留的内存容量大小，为了保障一些基础模块能够正常运行，一定会多预留 `memory_reserved` 以供使用。
 
 |      **属性**      |   **描述**   |
 |------------------|------------|
@@ -10,6 +8,3 @@ memory_reserved 用于设置系统预留内存的大小。
 | 默认值              | 500M       |
 | 取值范围             | \[10M, +∞) |
 | 是否重启 OBServer 生效 | 否          |
-
-
-
