--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/138.memory_reserved.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/138.memory_reserved.md
@@ -1,15 +1,10 @@
-memory_reserved 
-====================================
+# memory_reserved
 
-memory_reserved 用于设置系统预留给 KVCache 的内存容量。
-
+`memory_reserved` 用于设置系统底层模块预留的内存容量大小，为了保障一些基础模块能够正常运行，一定会多预留 `memory_reserved` 以供使用。
 
 |      **属性**      |   **描述**   |
 |------------------|------------|
 | 参数类型             | 容量单位       |
 | 默认值              | 500M       |
 | 取值范围             | \[10M, +∞) |
-| 是否重启 observer 进程生效 | 否          |
-
-
-
+| 是否重启 OBServer 节点生效 | 否          |
