--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
@@ -64,7 +64,7 @@ Query OK, 0 rows affected
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>当前版本中，仅 CPU、Memory 配置生效，其他 I/O 参数（例如 IPOS）暂不生效。</p>
+    <p>当前版本中，仅 CPU、Memory 配置生效，其他 I/O 参数（例如 IOPS）暂不生效。</p>
   </main>
 
 ### 调整租户内存中 MemTable 的比例
